# TG4

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  coverage.json  dev_notes.md  grid_ensemble_state.json  notes.md  pyproject.toml  requirements.txt
archive/docs/: index.md
config/: agents.yaml  database.yaml  exchanges.yaml  execution.yaml  hodl.yaml  indicators.yaml  orchestration.yaml  portfolio.yaml  prompts.yaml  risk.yaml  snapshot.yaml
data/: __init__.py
docs/: KRAKEN_WEBSOCKET_HFT_PLAN.md  STRATEGY_GUIDE.md  UNIFIED_QUICK_REFERENCE.md  WEBSOCKET_PAPER_TESTER_DESIGN.md  index.md
docs_archive/: BTC_GRID_MARGIN_STRATEGIES.md  UNIFIED_TRADING_PLATFORM.md
logs/: ensemble_backtest_equity.csv  equity_curve.csv  trades.csv
migrations/: 001_agent_tables.sql  002_model_comparisons.sql  003_phase3_orchestration.sql  003_risk_state_and_indexes.sql  005_paper_trading.sql  007_sentiment_analysis.sql  008_sentiment_analysis_fixes.sql  009_hodl_bags.sql  010_hodl_bags_is_paper.sql
notebooks/: 01_data_exploration.ipynb  08_defensive_backtest.ipynb  14_live_prep.ipynb  15_strategy_backtests.ipynb
src/: backtest_ensemble.py  backtester.py  data_fetcher.py  executor.py  live_paper.py  main.py  orchestrator.py  portfolio.py  risk_manager.py  strategy_portfolio.py
src_archive/: backtest_leverage.py  backtest_rl_leverage.py  dashboard.py  executor.py  grid_ensemble_orchestrator.py  live_paper.py  strategy_registry.py  unified_trader.py  yield_manager.py
strategies_config/: active_strategy.yaml
triplegain/: __init__.py  run_paper_trading.py
(+814 files in other folders)
